# Cyrkensia

./: .gitignore  Cargo.toml  DEV-NOTES.txt  README.md  RPC-Assets.md  Release.ps1  SECURITY.md  build.rs  cyrkensia.go  go.mod  go.sum  help.go  info.go
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-linux.yml  build-windows.yml  cargo-clippy.yml  codeql-analysis.yml
go/: Makefile  README.md  Release.ps1  go-daemon.sh
go/src/: Makefile  cyrkensia.go  go.mod  go.sum
go/src/server/: handles.go  hostinfo.go  middleware.go  server.go
go/src/utils/: albumsize.go  config.go  filesystem.go  printer.go  uuid.go
php/: README.md  hostinfo.php
server/: handles.go  hostinfo.go  middleware.go  server.go
src/: account.rs  accounts.rs  album.rs  artist.rs  author.rs  config.rs  hostinfo.rs  lib.rs  metadata.rs  owner.rs
src/api/: mod.rs
src/database/: mod.rs  user.rs
src/server/: endpoints.rs  middleware.rs  mod.rs  redirect.rs  redirects.rs  responses.rs  route.rs  routes.rs
src/server/middleware/: mod.rs
src/server/routes/: mod.rs
utils/: config.go  filesystem.go  printer.go
