[package]
name = "cyrkensia"
description = "Server for Azura and Shigure music repositories"
version = "1.2.0"
edition = "2021"
rust-version = "1.65"
license = "EUPL-1.2"
readme = "README.md"
build = "build.rs"
repository = "https://github.com/Stridsvagn69420/Cyrkensia"
homepage = "https://github.com/Stridsvagn69420/Cyrkensia"
documentation = "https://docs.rs/cyrkensia"
authors = ["Stridsvagn69420"]
categories = ["web-programming::http-server", "web-programming", "multimedia", "multimedia::audio", "filesystem"]
keywords = ["music", "server", "repository"]
default-run = "cyrkensia"

[dependencies]
# Main crate
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.2", features = ["v4", "serde"] }
dirs = "4"
kagero = { version = "0.4", default-features = false, features = ["printer"] }

# Server only
actix-web = { version = "4", optional = true }
actix-cors = { version = "0.6", optional = true }
blake3 = { version = "1.3", optional = true }
sha2 = { version = "0.10", optional = true }
base64 = { version = "0.20", optional = true }
chrono = { version = "0.4", optional = true, features = ["std", "clock"] }

# Accounts only
argon2 = { version = "0.4", optional = true, features = ["std", "password-hash"] }

[features]
default = ["server", "accounts"]
accounts = ["argon2"]
server = ["actix-web", "actix-cors", "blake3", "sha2", "chrono", "base64"]

[build-dependencies]
chrono = "0.4"

[[bin]]
name = "cyrkensia"
path = "src/bin/cyrkensia.rs"
required-features = ["server"]

[[bin]]
name = "cyrkensia-cfg"
path = "src/bin/cyrkensia-cfg.rs"
required-features = []

[profile.release]
lto = true
strip = true
debug = false

[package.metadata.docs.rs]
targets = [
	"x86_64-unknown-linux-gnu",
	"x86_64-pc-windows-msvc",
	"x86_64-pc-windows-gnu",
	"aarch64-unknown-linux-gnu",
	"x86_64-unknown-openbsd",
	"x86_64-unknown-freebsd",
	"x86_64-apple-darwin"
]